changing kofi links to VGen

--- a/doqmeat/notebook/F2U/codes.html
+++ b/doqmeat/notebook/F2U/codes.html
@@ -22,7 +22,7 @@
 			<center>
 				<h1>templates / codes</h1>
 			</center>
-		<p>F2U layouts and templates coded by me for you to use on your website! <a title="i host the zip folders with the files here!" href="https://ko-fi.com/doqmeat/shop/htmltemplates" target="_blank">ko-fi shop</a> for easy downloads!
+		<p>F2U layouts and templates coded by me for you to use on your website! <a title="i host the zip folders with the files here!" href="https://vgen.co/doqmeat/shop" target="_blank">VGen shop</a> for easy downloads!
 
 		<h2>rules</h2>
 
@@ -33,18 +33,16 @@
 		<img src="https://github.com/doqmeat/js-walkman-mp3-player/raw/master/examples/walkman.gif" alt="demo of the JS walkman mp3 player">
 		<p>i had one of these when i was little so i wanted to try doing a JS music player (using sayantanm19's <a href="https://github.com/sayantanm19/js-music-player" target="_blank" class="outlink">js-music-player</a>) that looked as much as the real thing. it was very fun to do tbh! i implemented a little playlist screen in which you can select what song to play.</p>
 		<p>it looks best on firefox, but looks okay on chrome. more details about issues can be found on the github repo.</p>
-		<h2 id="yukika"><a title="click for preview and code!" href="https://doqmeat.github.io/HTML-templates/yukika/" target="_blank">yukika passport</a></h2>
+		<h2 id="yukika"><a title="click for preview and download!" href="https://doqmeat.github.io/HTML-templates/yukika/" target="_blank">yukika passport</a></h2>
 		<img src="preview/yukika1.jpg" width="100%" alt="screenshots of yukika theme">
 		<img src="preview/yukika2.jpg" width="100%" alt="screenshots of yukika theme">
 		<p>a fun exercise on CSS animations and to see how close i could get to doing all of this with my current knowledge of JS. inspired by yukika's soul lady album and the passport inclusion! i talk more about it in the preview :3</p>
 
-		<h2 id="notebook"><a title="click for preview and code!" href="preview/notebook.html" target="_blank">notebook</a></h2>
+		<h2 id="notebook"><a title="click for preview and download!" href="preview/notebook.html" target="_blank">notebook</a></h2>
 		<center><img src="preview/notebook.jpg" width="100%"><br><img src="preview/notebook2.jpg" width="100%"></center>
 		<p>since i was making the notebook code for my resources page, i wanted to clean to code up eventually so i could share it with others and here is the result!</p>
 
 		<hr>
-
-
 
 	</div>
 </body>
