--- a/doqmeat/notebook/F2U/materials.html
+++ b/doqmeat/notebook/F2U/materials.html
@@ -45,7 +45,8 @@
 			</center>
 
 		<h2 id="buttons">buttons</h2>
-		<p><img src="../!g/ko-fi-template.png" alt="ko-fi template button"> <img src="../!g/ko-fi-template-red.png" alt="ko-fi red template button"> ko-fi template button. background is transparent.</p>
+		<p><img src="../!g/ko-fi-template.png" alt="ko-fi template button with a pink heart"> <img src="../!g/ko-fi-template-red.png" alt="ko-fi red template button with a red heart"> <br> ko-fi button.</p>
+		<p><img src="/!f/v5/assets/vgen.png" alt="vgen button that says commissions and shop"> <br> VGen button</p>
 
 		<h2 id="bgs">backgrounds</h2>
 
