--- a/doqmeat/notebook/F2U/preview/notebook.html
+++ b/doqmeat/notebook/F2U/preview/notebook.html
@@ -244,7 +244,7 @@ don't take this code for your template cus it might be outdated or missing comme
 			<div id="tab1-p" class="paper left">
 				<div class="left-in">
 					<h1>F2U notebook template</h1>
-					by <a href="/" target="_blank">doqmeat</a> / <a href="https://ko-fi.com/s/a797c56b9f" target="_blank">download</a> / <a href="https://github.com/doqmeat/HTML-templates/tree/main/notebook" target="_blank">github source</a>
+					by <a href="/" target="_blank">doqmeat</a> / <a href="https://vgen.co/doqmeat/product/notebook-html-template/b5bcef41-19a0-4bbc-9d14-974376323f00" target="_blank">download</a> / <a href="https://github.com/doqmeat/HTML-templates/tree/main/notebook" target="_blank">github source</a>
 
 					<p><mark>credit is not required but a link back to my website is very appreciated!</mark></p>
 
@@ -253,7 +253,7 @@ don't take this code for your template cus it might be outdated or missing comme
 					<p>heavily encouraged to edit and customize to your liking :) there's comments in the code with pointers and resources to help out if needed! if there's any questions feel free to send them my way</p>
 
 					<p>tested on both firefox and chrome</p>
-					<p>not compatible with mobile</p>
+					<p>not responsive with mobile</p>
 
 					<!-- TAB 1 left paper end div -->
 				</div>
