--- a/doqmeat/notebook/F2U/preview/notebook.html
+++ b/doqmeat/notebook/F2U/preview/notebook.html
@@ -2,6 +2,7 @@
 <html>
 <!-- 
 coded with love by des 
+
 don't take this code for your template cus it might be outdated or missing comments btw... i always update codepen and the github versions-->
 
 <head>
@@ -100,7 +101,7 @@ don't take this code for your template cus it might be outdated or missing comme
 
 		/* you can also customize the look of SPECIFIC TAB pages. take TAB 2 for example: */
 
-		#tab2-p {
+		.tab2-p {
 			font-family: consolas;
 			font-size: 14px;
 			background: url(/!g/bg/yellobg.png);
@@ -241,7 +242,7 @@ don't take this code for your template cus it might be outdated or missing comme
 
 		<!-- 	TAB 1 wrapper -->
 		<div id="tab1-wrapper" class="tabcontent">
-			<div id="tab1-p" class="paper left">
+			<div class="tab1-p paper left">
 				<div class="left-in">
 					<h1>F2U notebook template</h1>
 					by <a href="/" target="_blank">doqmeat</a> / <a href="https://vgen.co/doqmeat/product/notebook-html-template/b5bcef41-19a0-4bbc-9d14-974376323f00" target="_blank">download</a> / <a href="https://github.com/doqmeat/HTML-templates/tree/main/notebook" target="_blank">github source</a>
@@ -259,7 +260,7 @@ don't take this code for your template cus it might be outdated or missing comme
 				</div>
 			</div>
 			<!-- 	TAB 1 right paper -->
-			<div id="tab1-p" class="paper right">
+			<div class="tab1-p paper right">
 				<p><img src="/collection/cats/!g/computercat.jpg" width="40%" align="left" style="margin:10px;">Mouser turkish angora siberian mouser. Puma kitty, cornish rex so panther. Donskoy burmese bengal malkin panther. Savannah tiger havana brown yet bobcat norwegian forest. Ocicat singapura yet sphynx, but devonshire rex tomcat. Norwegian forest balinese grimalkin mouser. Munchkin bengal, but bengal american shorthair. Burmese maine coon malkin or cornish rex or birman but maine coon, but birman. Panther puma thai.</p>
 
 				<p><img src="/collection/cats/!g/creatureofjoy.jpg" width="40%" align="right" style="margin:10px;">Mouser turkish angora siberian mouser. Puma kitty, cornish rex so panther. Donskoy burmese bengal malkin panther. Savannah devonshire rex yet egyptian mau norwegian forest singapura yet lion but ragdoll. American shorthair ragdoll so tom so persian ocicat and puma for mouser. Scottish fold norwegian forest. Savannah tiger havana brown yet bobcat norwegian forest. Ocicat singapura yet sphynx, but devonshire rex tomcat. Norwegian forest balinese grimalkin mouser. Munchkin bengal, but bengal american shorthair. Burmese maine coon malkin or cornish rex or birman but maine coon, but birman. Panther puma thai.</p>
@@ -270,7 +271,7 @@ don't take this code for your template cus it might be outdated or missing comme
 
 		<!-- TAB 2 wrapper -->
 		<div id="tab2-wrapper" class="tabcontent">
-			<div id="tab2-p" class="paper left">
+			<div class="tab2-p paper left">
 				<div class="left-in">
 					<p><img src="/collection/cats/!g/lalalalala.jpg" width="40%" align="left" style="margin:10px;">Mouser turkish angora siberian mouser. Puma kitty, cornish rex so panther. Donskoy burmese bengal malkin panther. Savannah devonshire rex yet egyptian mau norwegian forest singapura yet lion but ragdoll. American shorthair ragdoll so tom so persian ocicat and puma for mouser. Scottish fold norwegian forest. Savannah tiger havana brown yet bobcat norwegian forest. Ocicat singapura yet sphynx, but devonshire rex tomcat. Norwegian forest balinese grimalkin mouser. Munchkin bengal, but bengal american shorthair. Burmese maine coon malkin or cornish rex or birman but maine coon, but birman. Panther puma thai.</p>
 
@@ -280,7 +281,7 @@ don't take this code for your template cus it might be outdated or missing comme
 				</div>
 			</div>
 			<!-- 	TAB 2 right paper -->
-			<div id="tab2-p" class="paper right">
+			<div class="tab2-p paper right">
 				<p><img src="/collection/cats/!g/fishcat.jpg" width="40%" align="left" style="margin:10px;">Mouser turkish angora siberian mouser. Puma kitty, cornish rex so panther. Donskoy burmese bengal malkin panther. Savannah devonshire rex yet egyptian mau norwegian forest singapura yet lion but ragdoll. American shorthair ragdoll so tom so persian ocicat and puma for mouser. Scottish fold norwegian forest. Savannah tiger havana brown yet bobcat norwegian forest. Ocicat singapura yet sphynx, but devonshire rex tomcat. Norwegian forest balinese grimalkin mouser. Munchkin bengal, but bengal american shorthair. Burmese maine coon malkin or cornish rex or birman but maine coon, but birman. Panther puma thai.</p>
 
 				<p><img src="/collection/cats/!g/ishelistening.jpg" width="40%" align="right" style="margin:10px;">Mouser turkish angora siberian mouser. Puma kitty, cornish rex so panther. Donskoy burmese bengal malkin panther. Savannah devonshire rex yet egyptian mau norwegian forest singapura yet lion but ragdoll. American shorthair ragdoll so tom so persian ocicat and puma for mouser. Scottish fold norwegian forest. Savannah tiger havana brown yet bobcat norwegian forest. Ocicat singapura yet sphynx, but devonshire rex tomcat. Norwegian forest balinese grimalkin mouser. Munchkin bengal, but bengal american shorthair. Burmese maine coon malkin or cornish rex or birman but maine coon, but birman. Panther puma thai.</p>
@@ -290,27 +291,27 @@ don't take this code for your template cus it might be outdated or missing comme
 		</div>
 
 		<div id="tab3-wrapper" class="tabcontent">
-			<div id="tab3-p" class="paper left">
+			<div class="tab3-p paper left">
 				<div class="left-in">
 					<p><img src="/collection/cats/!g/jam.jpg" width="40%" align="left" style="margin:10px;">Mouser turkish angora siberian mouser. Puma kitty, cornish rex so panther. Donskoy burmese bengal malkin panther. Savannah devonshire rex yet egyptian mau norwegian forest singapura yet lion but ragdoll. American shorthair ragdoll so tom so persian ocicat and puma for mouser. Scottish fold norwegian forest. Savannah tiger havana brown yet bobcat norwegian forest. Ocicat singapura yet sphynx, but devonshire rex tomcat. Norwegian forest balinese grimalkin mouser. Munchkin bengal, but bengal american shorthair. Burmese maine coon malkin or cornish rex or birman but maine coon, but birman. Panther puma thai.</p>
 
 
 				</div>
 			</div>
-			<div id="tab3-p" class="paper right">
+			<div class="tab3-p paper right">
 				<p><img src="/collection/cats/!g/gatoempanada.jpg" width="40%" align="right" style="margin:10px;">Mouser turkish angora siberian mouser. Puma kitty, cornish rex so panther. Donskoy burmese bengal malkin panther. Savannah devonshire rex yet egyptian mau norwegian forest singapura yet lion but ragdoll. American shorthair ragdoll so tom so persian ocicat and puma for mouser. Scottish fold norwegian forest. Savannah tiger havana brown yet bobcat norwegian forest. Ocicat singapura yet sphynx, but devonshire rex tomcat. Norwegian forest balinese grimalkin mouser. Munchkin bengal, but bengal american shorthair. Burmese maine coon malkin or cornish rex or birman but maine coon, but birman. Panther puma thai.</p>
 
 			</div>
 		</div>
 
 		<div id="tab4-wrapper" class="tabcontent">
-			<div id="tab4-p" class="paper left">
+			<div class="paper left">
 				<div class="left-in">
 					text goes here
 
 				</div>
 			</div>
-			<div id="tab4-p" class="paper right">
+			<div class="paper right">
 				text goes here!
 
 
@@ -319,52 +320,52 @@ don't take this code for your template cus it might be outdated or missing comme
 
 
 		<div id="tab5-wrapper" class="tabcontent">
-			<div id="tab5-p" class="paper left">
+			<div class="paper left">
 				<div class="left-in">
 					text goes here
 
 				</div>
 			</div>
-			<div id="tab5-p" class="paper right">
+			<div class="paper right">
 				text goes here!
 
 			</div>
 		</div>
 
 		<div id="tab6-wrapper" class="tabcontent">
-			<div id="tab6-p" class="paper left">
+			<div class="paper left">
 				<div class="left-in">
 					text goes here
 
 				</div>
 			</div>
-			<div id="tab6-p" class="paper right">
+			<div class="paper right">
 				text goes here
 
 			</div>
 		</div>
 
 		<div id="tab7-wrapper" class="tabcontent">
-			<div id="tab7-p" class="paper left">
+			<div class="paper left">
 				<div class="left-in">
 					text goes here
 
 				</div>
 			</div>
-			<div id="tab7-p" class="paper right">
+			<div class="paper right">
 				text goes here
 
 			</div>
 		</div>
 
 		<div id="tab8-wrapper" class="tabcontent">
-			<div id="tab8-p" class="paper left">
+			<div class="paper left">
 				<div class="left-in">
 					text goes here
 
 				</div>
 			</div>
-			<div id="tab8-p" class="paper right">
+			<div class="paper right">
 				text goes here
 
 			</div>
