couple of minor changes

--- a/doqmeat/sites/index.html
+++ b/doqmeat/sites/index.html
@@ -46,7 +46,6 @@
 			<a title="jay - love the aesthetic of this site! the artbooks page is my favorite" href="https://catsoupery.neocities.org" target="_blank"><img src="!g/catsoupery.gif"></a>
 			<a title="hoonis - the most colorful website ever!! whimsical even" href="https://confettiguts.neocities.org" target="_blank"><img src="!g/confettiguts.gif"></a>
 			<a title="bomsoup - fellow kpopper, i also get very cool film recs from this site!" href="https://squirrelglue.neocities.org/" target="_blank"><img src="!g/squirrelglue.png" alt="squirrelglue"></a>
-			<a title="juliette - CUTEEEE site!!! i love being here" href="https://juriettoo.neocities.org" target="_blank"><img src="!g/juriettoo.png"></a>
 			<a title="rio - awesome website with a responsive (and incredible!) layout. also has a ton of links to resources, books, etc!" href="https://nenrikido.neocities.org" target="_blank"><img src="!g/nenrikido.gif"></a>
 			<a title="mamo - ONE OF MY FAV SITES!!! they have a ton of pages dedicated to the media they consume and i just love how they all look!!! lots of stuff to check out here! their lyrics pages is a must see" href="https://kakashi.neocities.org" target="_blank"><img src="!g/kakashi.gif"></a>
 			<a title="mn1ca - another of my favorite sites! centered around arts and craft! the layout is so cool too" href="https://mn1ca.neocities.org" target="_blank"><img src="!g/mn1ca.gif"></a>
@@ -145,7 +144,6 @@
 			<a href="https://scftst4rs.neocities.org" target="_blank"><img src="!g/scftst4rs.gif" alt="scftst4rs"></a>
 			<a href="https://firozah.com/" target="_blank"><img src="!g/firozah.gif" alt="firozah"></a>
 			<a href="https://boypussy.neocities.org"><img src="!g/boypussy.gif" alt="boypussy"></a>
-			<a href="https://411.rip/" target="_blank"><img src="!g/411.gif" alt="411"></a>
 			<a href="https://featherfae.neocities.org/" target="_blank"><img src="!g/faetherfae.gif" alt="faetherfae"></a>
 			<a href="https://onthequiet.nekoweb.org/" target="_blank"><img src="!g/onthequiet.gif" alt="onthequiet"></a>
 			<a title="charming little personal site! mostly journals from the webmaster. feel very intimate" href="https://turd.neocities.org/" target="_blank"><img src="!g/turd.png"></a>
@@ -287,7 +285,6 @@
 		<div class="banner">
 			<a title="meisa - japanese artists that has worked with one of my fav vocaloid producers: siinamota!" href="http://hathune39.web.fc2.com/" target="_blank"><img src="!g/hathune.gif"></a>
 			<a title="Tokucina / 彩音ちな - gorgeous oil pastel art! one of my many art inspirations" href="http://tokeisou.client.jp/" target="_blank"><img src="!g/tokeisou.client.jp.jpg"></a>
-			<a title="futureisfailed / erbatur - electronic artist i like!" href="http://erbatur.web.fc2.com/" target="_blank"><img src="!g/erbatur.gif" alt="erbatur"></a>
 		</div>
 
 		<h4 id="resources">resources / graphics</h4>
@@ -338,7 +335,7 @@
 		<a title="siinamota fansite owned by me!" href="https://siinamota.doqmeat.com" target="_blank"><img src="https://siinamota.doqmeat.com/info/!g/buttons/button1%20(1).png" alt="siinamota fansite"></a>
 		<a title="fansite for kpop group billlie" href="https://billlielove.neocities.org/" target="_blank"><img src="!g/billlielove.webp" alt="billlielove"></a>
 		<a href="https://read-nekojiru.neocities.org/"><img src="!g/read-nekojiru.gif" alt="read-nekojiru"></a>
-		<a href="frutigeraeroarchive.neocities.org" target="_blank"><img src="!g/frutigeraeroarchive.png" alt="frutigeraeroarchive"></a>
+		<a href="https://frutigeraeroarchive.neocities.org" target="_blank"><img src="!g/frutigeraeroarchive.png" alt="frutigeraeroarchive"></a>
 
 		<h4 id="fun">for fun / experiences / misc</h4>
 		<div class="neo">
@@ -396,15 +393,19 @@
 			<a title="maalused - has a very cool and mysterious vibe to it!" href="https://maalused.neocities.org" target="_blank"><img src="!g/maalused.gif"></a>
 			<a title="telle - nice site with interesting logs!" href="https://catcakes.neocities.org/" target="_blank"><img src="!g/catcakes.gif" alt="catcakes"></a>
 			<a title="lovely photos on their blog" href="https://bootlegfriend.neocities.org" target="_blank"><img src="!g/bootleg.png" alt="bootleg"></a>
+			<a title="juliette - CUTEEEE site!!! i love being here" href="https://juriettoo.neocities.org" target="_blank"><img src="!g/juriettoo.png"></a>
 			<a href="https://angelscake.neocities.org/" target="_blank"><img src="!g/angelscake.gif" alt="angelscake"></a>
 			<a href="https://sealparty.neocities.org" target="_blank"><img src="!g/sealparty.gif"></a>
 			<a href="https://adilene.net" target="_blank"><img src="!g/adilene.net.png"></a>
 			<a title="pom" href="https://pomelo.lol/" target="_blank"><img src="!g/pomelo.gif"></a>
 			<a href="https://strawberryreverie.neocities.org" target="_blank"><img src="!g/strawberryreverie.gif" alt="strawberryreverie"></a>
 			<a href="https://maria.town" target="_blank"><img src="!g/maria.town.png" alt="maria.town"></a>
+			<a href="https://411.rip/" target="_blank"><img src="!g/411.gif" alt="411"></a>
+			<a title="futureisfailed / erbatur - electronic artist i like!" href="http://erbatur.web.fc2.com/" target="_blank"><img src="!g/erbatur.gif" alt="erbatur"></a>
 		</div>
 
-		<p><a href="https://gougou772.neocities.org/" target="_blank">gougou772</a> /
+		<p>
+			<a href="https://gougou772.neocities.org/" target="_blank">gougou772</a> /
 			<a href="https://glassheart.neocities.org" target="_blank">glassheart</a> /
 			<a href="https://karameruu.neocities.org/" target="_blank">karameruu</a> /
 			<a title="lexi" href="https://lexiqqq.com/" target="_blank">lexiqqq</a> /
