--- a/doqmeat/microblog/index.html
+++ b/doqmeat/microblog/index.html
@@ -78,6 +78,9 @@
 				<!-- new entry! -->
 				<!-- button format: 'img path','alt','desc' -->
 				<article>
+					<p><b>08.dec.25 - 1am</b> kinda wanna put my entire site through a static site generator bc it would make pages like <a href="/vgs">vgs</a>, <a href="/journal">journal</a>, <a href="/blog">blog</a>, <a href="/music">music</a> so much easier and i can stop relying on iframes as well but the thought of having to deal with THE REST of my site on a SSG just gives me nightmares.... so... i'm not quite sure what to do. the only SSG that i have knowledge on is 11ty and but man it would be so greatttt if i could use it for the other pages... maybe i'll figure it out one day. i need to test it out first of all.</p>
+				</article>
+				<article>
 					<p><b>13.oct.25 - 8pm</b> i have been so tired lately!! the classes i am taking have been taking up so much of my free time. i haven't even been able to play more than 4hrs of <i>silksong</i> since it got released over a month ago! i am taking more classes this semester compared to past ones but man. i miss my free time <img src="/!g/pix/sad.gif" alt=""></p>
 				</article>
 				<article>
