updated homepage, learning in public, and notebook

--- a/doqmeat/index.html
+++ b/doqmeat/index.html
@@ -89,8 +89,9 @@ you're free to take whatever you need from my site, but please refrain from taki
 			<a class="m" href="/reading">reading</a>
 
 			<h3>misc</h3>
-			<a class="o" href="/learning">learning in public</a>
+			<a class="o" href="/learning">learning <img src="!g/pix/updated1.gif" alt="page updated"></a>
 			<a class="o" href="/faq">FAQ</a>
+			<a class="o" href="/fish-love">fish love <img src="!g/pix/new1.gif" alt="new page"></a>
 
 			<h3>sitely</h3>
 			<a href="/info" class="s">info</a>
@@ -167,7 +168,7 @@ you're free to take whatever you need from my site, but please refrain from taki
 					<p><span class="title">playing: </span> silksong</p>
 					<p><span class="title">watching: </span> jojo (part 4), smiling friends (season 3), fionna and cake (season 2), pluribus</p>
 					<p><span class="title">reading: </span> oddysey</p>
-					<p><span class="title">working on: </span> some fun stuff...</p>
+					<p><span class="title">working on: </span> updating site, new f2u template</p>
 					<p class="date">last updated: 14.nov.25</p>
 				</section>
 				<p id="notepad-notice">please turn on JS for this site omg... i promise i only use it for fun stuff.</p>
