--- a/doqmeat/learning/index.html
+++ b/doqmeat/learning/index.html
@@ -25,12 +25,13 @@
 			<ul>
 				<li><a href="javascript/index.html">javascript</a></li>
 				<li><a href="bash/index.html">bash reference sheet</a> - when im a little stupid for the bash manuals so i have to make my own reference sheet for using my git bash terminal. also i just forget a lot of these commands.</li>
-				<li><a href="python/index.html">python</a> - archived</li>
+				<li><a href="python/index.html">python</a> - archived. fuck python</li>
 			</ul>
 		</main>
 		<footer>
-			<p>....... <a title="go back home" href="/">ᓚᘏᗢ</a> .......</p>
+			<p>....... <a title="go back home" href="/">ᓚᘏᗢ home</a> .......</p>
 			<p> &hearts; all made with love by des &hearts;</p>
+			<p>last updated on 11.dec.25</p>
 			<p><b>credit</b>: <a href="/notebook/resources/fonts.html">fonts</a> used: bm-neko, mononoki, power pagedoll from fujimoto's <i>chainsaw man</i></p>
 		</footer>
 	</main>
