--- a/doqmeat/learning/javascript/thoughts.html
+++ b/doqmeat/learning/javascript/thoughts.html
@@ -27,7 +27,7 @@
 	<h1>i'm learning JS</h1>
 	<main>
 		<h2 id="thoughts">my thoughts as i learn</h2>
-		<p>it's kind of crazy how much my uni classes have helped me so much with my progress in JS. and it's all thanks to C++. thank you C++! i think C++ is pretty cool but this isn't about her, this is about JS. i think my overall use / knowledge of JS has increased quite a bit but i still need some tips and stuff on how to structure my JS code better. i think right now one of my biggest milestones have been getting a better understanding of how the <code>eventListeners</code> work. i mostly used them on a page i made for me and my gf's 4th anniversary (which if i ever upload, it will be as a template or something) and another page where you have to make 2 fish kiss. i wanted to make these pages as interactive as possible while also having to make them simple because of FINALS and uni projects i haven't finished.</p>
+		<p id="helena-4th-anni">it's kind of crazy how much my uni classes have helped me so much with my progress in JS. and it's all thanks to C++. thank you C++! i think C++ is pretty cool but this isn't about her, this is about JS. i think my overall use / knowledge of JS has increased quite a bit but i still need some tips and stuff on how to structure my JS code better. i think right now one of my biggest milestones have been getting a better understanding of how the <code>eventListeners</code> work. i mostly used them on a page i made for me and my gf's 4th anniversary (which if i ever upload, it will be as a template or something) and another page where you have to make 2 fish kiss. i wanted to make these pages as interactive as possible while also having to make them simple because of FINALS and uni projects i haven't finished.</p>
 		<figure>
 			<img src="!g/251207-helena-site.jpg" alt="a screenshot of the first page, it has two envelopes. one i opened and there's a blank page displaying.">
 			<figcaption>screenshot of the main page where you have to click on letters and it will reveal different stuff</figcaption>
@@ -39,7 +39,7 @@
 		<p style="font-size:2rem;line-height:normal">damn discrete math is kinda fucking cool.</p>
 		<figure>
 			<img src="!g/251207-fishlove.jpg" alt="screenshot of the fish love next to some javascript code">
-			<figcaption>screenshot of another page where you have to make 2 fish kiss.</figcaption>
+			<figcaption>screenshot of another page where you have to make 2 fish kiss. <u>11.dec.25 edit:</u> the <a href="/fish-love">fish love</a> page is now available!</figcaption>
 		</figure>
 		<p>then the next page titled <i>fish love</i> is exactly about that. trying to make 2 fish kiss... using extensive use of <code>eventListeners</code> for the drag and drop. the base code for the draggable elements is from <a href="https://stackoverflow.com/questions/14695933/draggable-div-with-classname" target="_blank" rel="noopener noreferrer">stackoverflow</a>! and i did a lot of minor tweaks for it to work for what i needed it to. i think it was pretty cool that once i got the fish moving my next step was <q>okay and now how do we know they are kissing?</q> <u>basic math baby!</u> or at least i'm pretty sure it is... either way i wasnt born for math so i still had to take out a paper and pen and start drawing the grid and the fish boxes so i could see what had to be done and it birthed this AWESOME function that checks if the fish are kissing.</p>
 		<textarea style="height:100px">
