--- a/doqmeat/notebook/index.html
+++ b/doqmeat/notebook/index.html
@@ -233,13 +233,9 @@ https://coolors.co/e3edff-fff4bf-d1ebcd-ffe3e3-e2d2f0
 			<div class="info-p paper left">
 				<div class="left-in">
 					<h1>des' resources</h1>
-					<div id="sticky" class="draggable">
-						<br><br>welcome to my little resource notebook! :3<br><img src="/!g/deco/bunnyzzz.gif">
-					</div>
 					<p>in this notebook you'll find many helpful links that have helped me throughout my journey of making this site.</p>
-					<p>i will also be sharing my free to use stuff such as templates, site materials, and more! take whatever you need from here!</p>
+					<p>i will also be sharing my free to use stuff such as templates, site materials, and more! by other people and my own. take whatever you need from here!</p>
 					<p>last updated on: <b>10.jul.25</b></p>
-
 					<!-- 		paper left end div -->
 				</div>
 			</div>
