--- a/doqmeat/fish-love/index.html
+++ b/doqmeat/fish-love/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<!-- i love u helena -->
+<!-- 
+started 06.dec.26 - finished: 10.dec.25
+made by des with love for my gf, i love u helena 
+-->
 
 <head>
   <meta charset="UTF-8">
@@ -14,7 +17,7 @@
 <body>
   <h1>make the fish kiss! (they wanna kiss so bad!!!!)</h1>
   <p>
-    <center>move them with your cursor...</center>
+    <center>move them with your cursor... (P.S. enable audio autoplay and reload the page!)</center>
   </p>
   <fish class="left-fish"></fish>
   <fish class="right-fish"></fish>
