--- a/doqmeat/fish-love/index.html
+++ b/doqmeat/fish-love/index.html
@@ -17,7 +17,7 @@ made by des with love for my gf, i love u helena
 <body>
   <h1>make the fish kiss! (they wanna kiss so bad!!!!)</h1>
   <p>
-    <center>move them with your cursor... (P.S. enable audio autoplay and reload the page!)</center>
+    <center>move them with your cursor...</center>
   </p>
   <fish class="left-fish"></fish>
   <fish class="right-fish"></fish>
@@ -27,6 +27,7 @@ made by des with love for my gf, i love u helena
   <button id="info-open" onclick="document.querySelector('dialog#info').showModal()" title="open info dialog"><img src="assets/info.png" alt="click to open info dialog"></button>
   <dialog id="info">
     <button onclick="closeModal('info')">x</button>
+    <p><b>P.S. enable audio autoplay and reload the page!</b></p>
     <p>last updated: <b>11.dec.25</b></p>
     <p><i>made for my girlfriend for our 4th anniversary, i talk about the making of this page on my <a href="/learning/javascript/thoughts.html#helena-4th-anni">learning in public</a></i></p>
     <p><b>credits</b>: bg pic by <a href="https://www.pexels.com/photo/underwater-photography-of-ocean-2397651/" target="_blank">Jeremy Bishop</a>, kissing fish pic from <a href="https://www.hygger-online.com/fish-profile-why-do-kissing-fish-kiss/?srsltid=AfmBOorDHL_lfw1VoUlpmO3vEjZp0gkA_fDJjdzk0BT-pvjI4tK_xDfI" target="_blank">here</a>, draggable JS code from <a href="https://stackoverflow.com/questions/14695933/draggable-div-with-classname" target="_blank">stackoverflow</a></p>
