seperate page for bookmarks / fun links

--- a/doqmeat/notebook/index.html
+++ b/doqmeat/notebook/index.html
@@ -35,6 +35,7 @@ https://coolors.co/e3edff-fff4bf-d1ebcd-ffe3e3-e2d2f0
 
 		<div class="tab2">
 			<button id="defaultOpen" class="tablinks info-b" onclick="openTab('info-wrapper')">info &amp; creds</button>
+			<button class="tablinks fun-b" onclick="openTab('fun-wrapper')">bookmarks</button>
 			<button class="tablinks tut-b" onclick="openTab('tut-wrapper')">tutorials</button>
 		</div>
 
@@ -43,7 +44,7 @@ https://coolors.co/e3edff-fff4bf-d1ebcd-ffe3e3-e2d2f0
 			<div class="link-p paper left">
 				<div class="left-in">
 
-					<p>lots and lots of links. i save them all here!</p>
+					<p>lots and lots of links related to helping you out on your website making journey. i save them all here!</p>
 					<li><a href="resources/index.html#favs" target="iframe_a">personal favs</a></li>
 					<ul>
 						<li><a href="resources/index.html#resource-pages" target="iframe_a">other resource pages</a></li>
@@ -90,21 +91,6 @@ https://coolors.co/e3edff-fff4bf-d1ebcd-ffe3e3-e2d2f0
 					</ul>
 					<li><a href="resources/index.html#img-editing" target="iframe_a">image editing</a></li>
 					<li><a href="resources/index.html#misc" target="iframe_a">misc resources</a></li>
-					<li><a href="resources/index.html#fun" target="iframe_a">for fun</a></li>
-					<ul>
-						<li><a href="resources/index.html#comm" target="iframe_a">communities</a></li>
-						<li><a href="resources/index.html#dragndrop" target="iframe_a">drag and drop web builders</a></li>
-						<li><a href="resources/index.html#emoticons" target="iframe_a">copy-paste sites</a></li>
-						<li><a href="resources/index.html#vid" target="iframe_a">videos</a></li>
-						<li><a href="resources/index.html#music-links" target="iframe_a">music</a></li>
-						<li><a href="resources/index.html#games" target="iframe_a">games</a></li>
-						<li><a href="resources/index.html#articles" target="iframe_a">articles</a></li>
-						<li><a href="resources/index.html#join" target="iframe_a">things to join</a></li>
-						<ul>
-							<li><a href="resources/index.html#pixel-cliques" target="iframe_a">pixel cliques</a></li>
-							<li><a href="resources/index.html#webrings" target="iframe_a">webrings</a></li>
-						</ul>
-					</ul>
 					<!-- paper-left end div -->
 				</div>
 			</div>
@@ -228,12 +214,43 @@ https://coolors.co/e3edff-fff4bf-d1ebcd-ffe3e3-e2d2f0
 			<!-- 	F2U wrapper end div -->
 		</div>
 
+		<!-- 	fun links wrapper -->
+		<div id="fun-wrapper" class="tabcontent">
+			<div class="link-p paper left">
+				<div class="left-in">
+					<p>resource links was getting a bit crowded so i made a seperate page for fun bookmarks. articles, games, communities, etc.</p>
+					<ul>
+						<li><a href="resources/bookmarks.html" target="f_frame">communities</a></li>
+						<li><a href="resources/bookmarks.html#dragndrop" target="f_frame">drag and drop web builders</a></li>
+						<li><a href="resources/bookmarks.html#emoticons" target="f_frame">copy-paste sites</a></li>
+						<li><a href="resources/bookmarks.html#vid" target="f_frame">videos</a></li>
+						<li><a href="resources/bookmarks.html#music-links" target="f_frame">music</a></li>
+						<li><a href="resources/bookmarks.html#games" target="f_frame">games</a></li>
+						<li><a href="resources/bookmarks.html#articles" target="f_frame">articles</a></li>
+						<li><a href="resources/bookmarks.html#join" target="f_frame">things to join</a></li>
+						<ul>
+							<li><a href="resources/bookmarks.html#pixel-cliques" target="f_frame">pixel cliques</a></li>
+							<li><a href="resources/bookmarks.html#webrings" target="f_frame">webrings</a></li>
+						</ul>
+					</ul>
+
+					<!-- 		paper left end div -->
+				</div>
+			</div>
+
+			<div class="link-p paper right">
+				<iframe src="resources/bookmarks.html" name="f_frame" height="600px" width="489px" style="border:none"></iframe>
+				<!-- 	paper right end div -->
+			</div>
+			<!-- 	F2U wrapper end div -->
+		</div>
+
 		<!-- 	info related tab wrapper -->
 		<div id="info-wrapper" class="tabcontent">
 			<div class="info-p paper left">
 				<div class="left-in">
 					<h1>des' resources</h1>
-					<p>in this notebook you'll find many helpful links that have helped me throughout my journey of making this site.</p>
+					<p>in this notebook you'll find many helpful links that have helped me throughout my journey of making this site. there will be stuff related to webdev, indie web, and other tech stuff you might find useful! will also share interesting stuff i find on the web!</p>
 					<p>i will also be sharing my free to use stuff such as templates, site materials, and more! by other people and my own. take whatever you need from here!</p>
 					<p>last updated on: <b>10.jul.25</b></p>
 					<!-- 		paper left end div -->
