--- a/doqmeat/notebook/resources/fonts.html
+++ b/doqmeat/notebook/resources/fonts.html
@@ -40,13 +40,16 @@
 		<!-- font template 
 <p class="font" style="font-family:x;font-size:19px;"><a href="" target="_blank" >x</a><br>A B C D E F G H I J K L M N O P Q R S T U V W X Y Z <br> a b c d e f g h i j k l m n o p q r s t u v w x y z <br> 0 1 2 3 4 5 6 7 8 9 ! ? @ # &#38; % ^ &#38; * ( ) = + </p>
 -->
+
+		<p class="font" style="font-family:dot gothic;font-size:15px;"><a href="https://fonts.google.com/specimen/DotGothic16" target="_blank">DotGothic16</a><br>A B C D E F G H I J K L M N O P Q R S T U V W X Y Z <br> a b c d e f g h i j k l m n o p q r s t u v w x y z <br> 0 1 2 3 4 5 6 7 8 9 ! ? @ # &#38; % ^ &#38; * ( ) = + </p>
+
 		<p class="font" style="font-family:pixelhandwriting;font-size:19px;"><a href="https://www.pentacom.jp/pentacom/bitfontmaker2/gallery/?id=556" target="_blank">Owls N' Ink</a><br>A B C D E F G H I J K L M N O P Q R S T U V W X Y Z <br> a b c d e f g h i j k l m n o p q r s t u v w x y z <br> 0 1 2 3 4 5 6 7 8 9 ! ? @ # &#38; % ^ &#38; * ( ) = + </p>
 
 		<p class="font" style="font-family:silkscreen;font-size:13px;"><a href="https://kottke.org/plus/type/silkscreen/" target="_blank">silkscreen</a><br>A B C D E F G H I J K L M N O P Q R S T U V W X Y Z <br> a b c d e f g h i j k l m n o p q r s t u v w x y z <br> 0 1 2 3 4 5 6 7 8 9 ! ? @ # &#38; % ^ &#38; * ( ) = + </p>
 
 		<p class="font" style="font-family:mononoki;font-size:15px;"><a href="https://madmalik.github.io/mononoki/" target="_blank">mononoki</a><br>A B C D E F G H I J K L M N O P Q R S T U V W X Y Z <br> a b c d e f g h i j k l m n o p q r s t u v w x y z <br> 0 1 2 3 4 5 6 7 8 9 ! ? @ # &#38; % ^ &#38; * ( ) = + </p>
 
-		<p class="font" style="font-family:basiic;font-size:19px;"><a title="cred to cinni!" href="https://cinni.net/?z=/font" target="_blank">basiic by cinni</a><br>A B C D E F G H I J K L M N O P Q R S T U V W X Y Z <br> a b c d e f g h i j k l m n o p q r s t u v w x y z <br> 0 1 2 3 4 5 6 7 8 9 ! ? @ # $ % ^ &#38; * ( ) = + </p>
+		<p class="font" style="font-family:basiic;font-size:19px;"><a title="cred to cinni!" href="https://cinni.net/?z=/font" target="_blank">basiic</a><br>A B C D E F G H I J K L M N O P Q R S T U V W X Y Z <br> a b c d e f g h i j k l m n o p q r s t u v w x y z <br> 0 1 2 3 4 5 6 7 8 9 ! ? @ # $ % ^ &#38; * ( ) = + </p>
 
 		<p class="font" style="font-family:quiet-meows;font-size:19px;"><a href="https://www.w3schools.com/code/tryit.asp?filename=GRXMO3GDH2BI" target="_blank" style="font-weight:normal;">quiet meows</a><br>A B C D E F G H I J K L M N O P Q R S T U V W X Y Z <br> a b c d e f g h i j k l m n o p q r s t u v w x y z <br> 0 1 2 3 4 5 6 7 8 9 ! ? @ # $ % ^ &#38; * ( ) = + </p>
 
