added some graphics to my collection

--- a/doqmeat/collection/internet-graphics/index.html
+++ b/doqmeat/collection/internet-graphics/index.html
@@ -84,6 +84,7 @@
 			<img src="!g/evil.png">
 			<img src="!g/balled.png">
 			<img src="!g/jermba.png">
+			<img src="!g/homeless.gif" alt="my mom is kinda homeless speed trying NOT to laugh meme">
 			<img src="!g/stamp_i_am_a_cat_lover.gif">
 			<img src="!g/stamp_cat_10.png">
 			<img src="!g/Chococat09.gif">
@@ -169,6 +170,7 @@
 			<img src="!g/eepy.gif">
 			<img src="!g/fruit.gif">
 			<img src="!g/softandwarm.webp">
+			<img src="!g/imbloggin.webp" alt="girl im BLOGGING">
 			<img src="!g/dreamy.gif">
 			<img src="!g/imbeingputdown.gif">
 			<img src="!g/luvmyputer.gif">
@@ -296,7 +298,7 @@
 	</div>
 
 	<footer>
-		<p>last updated on: <b>12.aug.25</b></p>
+		<p>last updated on: <b>11.dec.25</b></p>
 		<p>page built with materials by <a href="https://foollovers.com/" target="_blank">foollovers</a> and bg by <a href="http://sozaiya405.chu.jp/" target="_blank">sozaiya 405</a></p>
 		<a href="/collection">collection</a> / <a href="/">home</a> / <a href="/sitemap">sitemap</a>
 	</footer>
